--- a/view/expense.html
+++ b/view/expense.html
@@ -29,6 +29,8 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <ul id="expense"></ul>
     <ul id="message1"></ul>
+    <div id="leaderboard"></div>
+   
    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
