--- a/view/login.html
+++ b/view/login.html
@@ -7,18 +7,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .background{
+        background-image: url(expense.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 500px;
+    }
+    #loginform{
+        width: 400px;
+        height: 400px;
+        background-color: rgb(218, 177, 101);
+        border-radius: 1rem;
+        padding: 3rem;
+        margin: 80px 350px;
+        /* text-align: center; */
+        justify-content: center;
+        position: relative;top: -30px;     
+    }
+    input[type=text]{
+        padding: 5px;
+        margin: 5px 0;   
+    }
+    input[type=password]{
+        padding: 5px;
+        margin: 5px 0;  
+    }
+    input{
+        border-radius:10px;
+        width: 90%;
+        font-family: inherit;
+        font-size: inherit;
+        margin: 10px;
+        padding: 10px; 
+    }
+    .button{
+        padding: 0.2rem;
+        margin: 10px;
+        color:rgb(249, 145, 9);
+        background-color:azure; 
+    }
+   #login{
+    color: azure;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 500px;
+    position: relative; top:-30px;
+   }
+   label{
+    color: azure;
+    font-size: large;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   }
+   p{
+    color: azure;
+    font-size: larger;
+    font-weight: 400px;
+   }
+   #login1:hover{
+    background-color: rgb(249, 145, 9);
+   }
+   #div{
+    position: relative;top:-20px;
+   }
+</style>
 
-<body>
+<body class="background">
     <form id="loginform" onsubmit="login(event)">
-        <h2>Login</h2>
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="enter email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-        <input type="submit" value="Login">
+        <h2 id="login">Login</h2>
+        <div id="div">
+            <label for="email">Email:</label>
+            <input class="input" type="text" id="email" name="email" placeholder="enter email" required><br>
+            <label for="password">Password:</label>
+            <input  class="input" type="password" id="password" name="password" placeholder="Enter your password" required><br>
+            <input  class="input" id="login1" type="submit" value="Login">
+            <button class="button" id="forgotpassword">Forgot password</button>
+        <p>New user? click here <a href="/">sign up</a></p>
+        </div>
+       
     </form>
-    <button class="button" id="forgotpassword">Forgot password</button>
-    <p>New user? click here <a href="/">sign up</a></p>
+   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script>
         async function login(e){
