--- a/view/expense.html
+++ b/view/expense.html
@@ -41,6 +41,9 @@
     button{
         background-color: rgba(101, 105, 105, 0.651);
         color: azure;
+        padding-left: 1rem;
+        margin-left:2rem ;
+
     }
     button:hover{
         background-color: rgb(72, 71, 71);
@@ -84,10 +87,15 @@
     
     </form>
     <button id="razorpay">Buy Premium</button>
+    
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <ul id="expense"></ul>
     <ul id="message1"></ul>
-    <div id="leaderboard"></div>
+    <ul id="expenses"></ul>
+    <div id="premium-features"></div>
+    <div id="message" class="list-group"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+   
+
    
    
 
