--- a/view/password.html
+++ b/view/password.html
@@ -74,7 +74,7 @@
             console.log('Emailllllllll:', email);
              console.log("data : ", data);
 
-            const fpassword=await axios.post("http://54.157.219.108:3000/password/forgotpassword",data);
+            const fpassword=await axios.post("http://localhost:3000/password/forgotpassword",data);
             console.log('Response : ', fpassword);
             alert(fpassword.data.message);
         }catch(error){
