--- a/view/login.html
+++ b/view/login.html
@@ -91,7 +91,7 @@
             <input  class="input" id="login1" type="submit" value="Login">
             <!-- <p class="button" id="forgotpassword"><a href="/password.html">Forgot password</a></p> -->
             <input class="button" id="forgotpassword" type ="submit" value="Forgot password">
-        <p>New user? click here <a href="/">sign up</a></p>
+        <p>New user? click here <a href="/signup">sign up</a></p>
         </div>
        
     </form>
